@@ -6,6 +6,8 @@ Changes since 20050105a:
 - Cleanup: Only use top-level Makefile.am, drop recursion.
 - Bugfix: Make groupexpire = pattern -1 actually work. Bug reported by
   Raymond Scholz
+- Bugfix: even if groupexpire is < 0 to mean "no expire", fix overview
+  data and check group for consistency.
 
 20050105a: Changes since 20050104a:
 - Bugfix: delete_article also removes articles from in.coming directory
